# tl

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md
examples/: hello.tl
src/: main.cpp
src/core/: token.hpp  token_type.hpp
src/core/ast/: declarations.hpp  expressions.hpp  statements.hpp  types.hpp
src/core/diagnostics/: diagnostic.hpp  diagnostics.cpp  diagnostics.hpp
src/core/lex/: lexer.cpp  lexer.hpp  token.hpp  token_type.hpp
src/core/parse/: error.hpp  parser.cpp  parser.hpp
src/core/semantics/: symbol.hpp  type.hpp
src/core/semantics/resolving/: types.cpp  types.hpp
src/core/visitors/: debug.hpp
src/driver/: driver.cpp  driver.hpp  options.hpp
src/util/: overloaded.hpp
tests/: CMakeLists.txt  lexer_tests.cpp
